# my_mlops_project

./: Makefile  README.md  data.dvc  predict.dockerfile  pyproject.toml  requirements.txt  trainer.dockerfile
.dvc/: config
config/: train_config.yaml
data/processed/: processed_target_train.pt
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.pt  trained_model.pt
my_mlops_project_mnj/: __init__.py  predict_model.py  train_model.py
my_mlops_project_mnj/data/: dataset.py  make_dataset.py
my_mlops_project_mnj/models/: model.py  predict_model.py  train_model.py
outputs/2024-01-10/23-30-09/.hydra/: hydra.yaml
outputs/2024-01-10/23-47-28/.hydra/: config.yaml  hydra.yaml
